--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -498,6 +498,197 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"></LinearLayout>
         </LinearLayout>
+
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:layout_marginBottom="10dp"
+                android:orientation="vertical">
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+                    <TextView
+                        android:id="@+id/login_tv"
+                        android:layout_width="wrap_content"
+                        android:text="Login"
+                        android:layout_height="wrap_content"/>
+                    <TextView
+                        android:id="@+id/login_status"
+                        android:layout_width="wrap_content"
+                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
+                        android:layout_height="wrap_content"/>
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+                    <TextView
+                        android:id="@+id/get_xslt_data_tv"
+                        android:layout_width="wrap_content"
+                        android:text="GET_XSLT_DATA"
+                        android:layout_height="wrap_content"/>
+                    <TextView
+                        android:id="@+id/get_xslt_data_status"
+                        android:layout_width="wrap_content"
+                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
+                        android:layout_height="wrap_content"/>
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+                    <TextView
+                        android:id="@+id/search_company_template_details_tv"
+                        android:layout_width="wrap_content"
+                        android:text="SEARCH_COMPANY_TEMPLATE_DETAILS"
+                        android:layout_height="wrap_content"/>
+                    <TextView
+                        android:id="@+id/search_company_template_details_status"
+                        android:layout_width="wrap_content"
+                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
+                        android:layout_height="wrap_content"/>
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+                    <TextView
+                        android:id="@+id/passive_face_tv"
+                        android:layout_width="wrap_content"
+                        android:text="PassiveFaceTrainingModel"
+                        android:layout_height="wrap_content"/>
+                    <TextView
+                        android:id="@+id/passive_face_status"
+                        android:layout_width="wrap_content"
+                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
+                        android:layout_height="wrap_content"/>
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/id_capture_training_model_view"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+                    <TextView
+                        android:id="@+id/id_capture_training_model_tv"
+                        android:layout_width="wrap_content"
+                        android:text="IDCaptureTrainingModel"
+                        android:layout_height="wrap_content"/>
+                    <TextView
+                        android:id="@+id/id_capture_training_model_status"
+                        android:layout_width="wrap_content"
+                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
+                        android:layout_height="wrap_content"/>
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/classifier_training_model_view"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:visibility="gone"
+                    android:orientation="horizontal">
+                    <TextView
+                        android:id="@+id/classifier_training_model_tv"
+                        android:layout_width="wrap_content"
+                        android:text="ClassifierTrainingModel"
+                        android:layout_height="wrap_content"/>
+                    <TextView
+                        android:id="@+id/classifier_training_model_status"
+                        android:layout_width="wrap_content"
+                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
+                        android:layout_height="wrap_content"/>
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/face_mask_training_model_view"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+                    <TextView
+                        android:id="@+id/face_mask_training_model_tv"
+                        android:layout_width="wrap_content"
+                        android:text="FaceMaskTrainingModel"
+                        android:layout_height="wrap_content"/>
+                    <TextView
+                        android:id="@+id/face_mask_training_model_status"
+                        android:layout_width="wrap_content"
+                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
+                        android:layout_height="wrap_content"/>
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+                    <TextView
+                        android:id="@+id/enc_doc_detection_training_model_tv"
+                        android:layout_width="wrap_content"
+                        android:text="EncDocDetectionTrainingModel"
+                        android:layout_height="wrap_content"/>
+                    <TextView
+                        android:id="@+id/enc_doc_detection_training_model_status"
+                        android:layout_width="wrap_content"
+                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
+                        android:layout_height="wrap_content"/>
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:visibility="gone"
+                    android:orientation="horizontal">
+                    <TextView
+                        android:id="@+id/fp_detection_training_model_tv"
+                        android:layout_width="wrap_content"
+                        android:text="FPDetectionTrainingModel"
+                        android:layout_height="wrap_content"/>
+                    <TextView
+                        android:id="@+id/fp_detection_training_model_status"
+                        android:layout_width="wrap_content"
+                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
+                        android:layout_height="wrap_content"/>
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+                    <TextView
+                        android:id="@+id/focus_training_model_448_tv"
+                        android:layout_width="wrap_content"
+                        android:text="FocusTrainingModel_448"
+                        android:layout_height="wrap_content"/>
+                    <TextView
+                        android:id="@+id/focus_training_model_448_status"
+                        android:layout_width="wrap_content"
+                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
+                        android:layout_height="wrap_content"/>
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+                    <TextView
+                        android:id="@+id/focus_face_training_model_tv"
+                        android:layout_width="wrap_content"
+                        android:text="FocusFaceTrainingModel"
+                        android:layout_height="wrap_content"/>
+                    <TextView
+                        android:id="@+id/focus_face_training_model_status"
+                        android:layout_width="wrap_content"
+                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
+                        android:layout_height="wrap_content"/>
+                </LinearLayout>
+
+            </LinearLayout>
+        </ScrollView>
     </LinearLayout>
 
     <ProgressBar
